@@ -1,5 +1,10 @@
 2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* pychecker/CodeChecks.py:
+	  Document CodeChecks.Code.codeObjects
+
+2011-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* pychecker/warn.py:
 	  Identify nested code better.
 
